--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "contenthub",
+  "name": "contenthub-js",
   "private": false,
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Content Hub widgets.",
   "main": "contenthub.js",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ddsky/contenthub.git"
+    "url": "git+https://github.com/ddsky/contenthub-js.git"
   },
   "keywords": [
     "dynamic content",
@@ -19,7 +19,7 @@
   "author": "David Urbansky",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ddsky/contenthub/issues"
+    "url": "https://github.com/ddsky/contenthub-js/issues"
   },
-  "homepage": "https://github.com/ddsky/contenthub#readme"
+  "homepage": "https://github.com/ddsky/contenthub-js#readme"
 }
